Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40208

QAudioOutput notify() signal doesn't work on android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.2
    • 5.3.1
    • Multimedia
    • None
    • Android 4.x
    • Android
    • fb35f025e320ef1639adf9a5d7bee73faa44e442

    Description

      On Android the notify() signal of QAudioOutput doesn't work. I have try with two devices with Android 4.
      I set notifyinterval about 125ms.

      (iStream is a QAudioOutput* object)

      iStream->setNotifyInterval(125);
      qDebug()<<"notify interval: " +QString::number(iStream->notifyInterval()); //I check and notify interval is 125 (all right)
      connect(iStream,SIGNAL(notify()),this,SLOT(blockDone()));

      This code works on Linux but on Android blockDone() is never called.

      Regards

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            andrea993.93 Andrea Drius
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes